- Fix bug #48317 (compile failure in dns.h) (thanks to Pierre for introducing this)